--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Games-Mastermind
 
 {{NEXT}}
         [DOCUMENTATION]
+        - fixed the Changes file, which got borked during the
+          release process
+
+0.04 Thu Aug 22 2013
+        [DOCUMENTATION]
         - fixed various minor POD issues (including RT #51736)
         [PACKAGING]
         - switch to Dist::Zilla for maintaining the distribution
